--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -1,230 +1,140 @@
+<!--
 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Commerce Platform</title>
+    <title>Joy-Parcel | Your Gift Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .navbar-brand {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
+        /* Hero Section Styles */
         .hero {
-            background: url('https://via.placeholder.com/1920x600') no-repeat center center/cover; /* Replace with your image */
-            height: 20vh;
+            background: url('images/hero-bg.jpg') no-repeat center center/cover;
+            height: 100vh;
+            color: white;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
-            color: white;
-            padding: 0 20px;
-            box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.6); /* Adds a dark overlay effect */
             position: relative;
         }
-
-        /* Overlay for better text visibility */
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.5); /* Adds a semi-transparent overlay */
-            z-index: 1;
-        }
-
         .hero h1 {
-            font-size: 3rem;
+            font-size: 3.5rem;
             font-weight: 700;
-            margin: 0;
-            z-index: 2;
-            position: relative;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
-
         .hero p {
             font-size: 1.25rem;
             font-weight: 300;
-            margin-top: 10px;
-            z-index: 2;
-            position: relative;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
-        .hero-carousel img {
-            height: 400px;
-            object-fit: cover;
+        .hero .btn {
+            background-color: #edeb59;
+            color: white;
+            border-radius: 30px;
+            padding: 12px 30px;
+            font-size: 1.1rem;
         }
-        .category-card {
+
+        .feature-category-card {
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border-radius: 10px;
         }
-        .category-card:hover {
+        .feature-category-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
         }
-        .category-card img {
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
+
+        .feature-category-card img {
+            height: 250px;
             object-fit: cover;
-            height: 150px;
+            border-radius: 10px 10px 0 0;
         }
+
+        .feature-category-card .card-body {
+            text-align: center;
+            padding: 20px;
+        }
+
         .footer {
-            background-color: #f8f9fa;
-            padding: 20px 0;
+            background-color: #dd63a1;
+            padding: 30px 0;
+            color: white;
         }
         .footer .fa {
             margin-right: 10px;
         }
+        .container {
+            background: #66d2e6;
+        }
     </style>
 </head>
 <body>
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+&lt;!&ndash; Hero Section &ndash;&gt;
+<section class="hero">
+    <div>
+        <h1>Welcome to Joy-Parcel</h1>
+        <p>Unwrap happiness with our unique hampers and delightful gifts!</p>
+        <a href="new-product-list" class="btn btn-warning">Shop Now</a>
+    </div>
+</section>
+
+&lt;!&ndash; Featured Categories &ndash;&gt;
+<div class="container mt-5">
+    <h2 class="text-center mb-5">Featured Categories</h2>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card feature-category-card h-100">
+                <img src="images/category1.jpg" class="card-img-top" alt="Category 1">
+                <div class="card-body">
+                    <h5 class="card-title">Gift Hampers</h5>
+                    <p class="card-text">Delightful hampers for any occasion</p>
+                    <a href="new-product-list?category=gift-hampers" class="btn btn-warning">Shop Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card feature-category-card h-100">
+                <img src="images/category2.jpg" class="card-img-top" alt="Category 2">
+                <div class="card-body">
+                    <h5 class="card-title">Chocolate Collection</h5>
+                    <p class="card-text">Satisfy your sweet cravings with premium chocolates</p>
+                    <a href="new-product-list?category=chocolate" class="btn btn-warning">Shop Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card feature-category-card h-100">
+                <img src="images/category3.jpg" class="card-img-top" alt="Category 3">
+                <div class="card-body">
+                    <h5 class="card-title">Luxury Gifts</h5>
+                    <p class="card-text">For the ones who deserve something special</p>
+                    <a href="new-product-list?category=luxury-gifts" class="btn btn-warning">Shop Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+&lt;!&ndash; Footer &ndash;&gt;
+<footer class="footer text-center">
     <div class="container">
-        <a class="navbar-brand" href="#">E-Shop</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.jsp">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="new-product-list">Categories</a>
-                </li>
-                <%--                <li class="nav-item">--%>
-                <%--                    <a class="nav-link" href="add-cart.jsp">ADD Cart <span class="badge bg-primary">0</span></a>--%>
-                <%--                </li>--%>
-                <li class="nav-item">
-                    <a class="nav-link" href="signin.jsp">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="admin.jsp">ADMIN</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="update-product.jsp">Cart <span class="badge bg-primary"></span></a>
-                </li>
-            </ul>
+        <p>Unwrap happiness with Joy-Parcel – Your one-stop online gift shop for personalized surprises and amazing deals!</p>
+        <p class="mt-3">© 2025 Joy-Parcel. All Rights Reserved.</p>
+        <div>
+            <a href="#" class="fa fa-facebook mx-2"></a>
+            <a href="#" class="fa fa-twitter mx-2"></a>
+            <a href="#" class="fa fa-instagram mx-2"></a>
         </div>
     </div>
-</nav>
-    <!-- Hero Section -->
-    <div class="hero">
-        <h1>Welcome to E-Shop</h1>
-        <p>Discover amazing deals and products tailored for you</p>
-    </div>
-    <!-- Search Bar -->
-    <div class="container my-4">
-        <div class="row">
-            <div class="col-md-8 mx-auto">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for products...">
-                    <button class="btn btn-primary" style="background-color: #f0c14b">Search</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <a href="new-product-list" class="btn btn-primary w-100" style="background-color:#f0c14b" role="button">SHOP Now</a>
+</footer>
 
-    <!-- Hero Carousel -->
-    <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="uploads/04.webp" class="d-block w-100" alt="Slide 1">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 style="color: white">Just in: Holiday Gifts</h1>
-                    <p>Find the perfect gift for your loved ones.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="uploads/02.jpg" class="d-block w-100" alt="Slide 2">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 style="color: white">Shop the Latest Trends</h1>
-                    <p>Explore our new collection.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="uploads/03.jpg" class="d-block w-100" alt="Slide 3">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 style="color: white">Exclusive Deals</h1>
-                    <p>Save more with our special offers.</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </button>
-    </div>
-
-    <%--<!-- Categories Section -->--%>
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">Our Products</h1>
-
-        <%
-        // Fetch the product list passed from the servlet
-        List<ProductDTO> productList = (List<ProductDTO>) request.getAttribute("productList");
-        if (productList != null && !productList.isEmpty()) {
-        %>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-            <%
-            for (ProductDTO product : productList) {
-            %>
-            <div class="col">
-                <div class="card h-100">
-                    <!-- Product Image -->
-                    <img src="<%= product.getImage_path() %>" class="card-img-top" alt="<%= product.getProductName() %>" style="height: 200px; object-fit: cover;">
-
-                    <div class="card-body">
-                        <!-- Product Name -->
-                        <h5 class="card-title"><%= product.getProductName() %></h5>
-
-                        <!-- Product Description -->
-                        <p class="card-text text-muted"><%= product.getProductDescription() %></p>
-
-                        <!-- Product Price -->
-                        <p class="fw-bold">Price: $<%= product.getProductPrice() %></p>
-
-                        <!-- Product Quantity -->
-                        <p>Available: <%= product.getProductQuantity() %> units</p>
-
-                        <!-- Action Button -->
-                        <form action="cart.jsp">
-                            <button type="submit" class="btn btn-danger">ADD TO CART</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <%
-            }
-            %>
-        </div>
-        <% } else { %>
-        <div class="alert alert-warning text-center" role="alert">
-            No products available at the moment.
-        </div>
-        <% } %>
-    </div>
-
-    <!-- Footer -->
-    <footer class="footer text-center">
-        <div class="container">
-            <p>Follow us on</p>
-            <div>
-                <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                <a href="#"><i class="fa fa-instagram fa-lg"></i></a>
-                <a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-            </div>
-            <p class="mt-3">© 2025 E-Shop. All Rights Reserved.</p>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+&lt;!&ndash; Bootstrap 5 JS &ndash;&gt;
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+-->
